--- a/intro-to-html/styles/lesson7_exercise.css
+++ b/intro-to-html/styles/lesson7_exercise.css
@@ -49,4 +49,79 @@
 .next_one {
   margin-top: 30px;
   margin-bottom: 30px;
+  font-style: italic;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.linkedin-line-1 {
+  font-family: Arial;
+  color: rgba(0, 0, 0, 0.8);
+  margin-bottom: 10px;
+}
+
+.linkedin-line-2 {
+  font-size: 18px;
+  width: 380px;
+  border-style: solid;
+  border-color: black;
+  border-width: 2px;
+  border-radius: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.linkedin-line-3 {
+  font-family: Arial;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.linkedin-join-btn {
+  background-color: rgb(10, 102, 194);
+  color: white;
+  border: none;
+  border-radius: 100px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 140px;
+  padding-right: 140px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.tw-profile-pic {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  object-position: center;
+  /* margin-right: 10px; */
+  border-radius: 25px;
+  vertical-align: middle;
+}
+
+.tw-tweet {
+  font-size: 16px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 250px;
+  border: none;
+  vertical-align: middle;
+}
+
+.tw-tweet-btn {
+  background-color: rgb(29, 155, 240);
+  color: white;
+  border: none;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  vertical-align: middle;
+  font-weight: bold;
+  border-radius: 30px;
+  cursor: pointer;
 }
