--- a/intro-to-html/styles/lesson8_exercise.css
+++ b/intro-to-html/styles/lesson8_exercise.css
@@ -47,3 +47,93 @@
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
   margin-bottom: 20px;
 }
+
+.ip-first-name,
+.ip-last-name {
+  font-size: 18px;
+  padding-left: 14px;
+  padding-right: 14px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 140px;
+  border-radius: 8px;
+  border-style: solid;
+  border-width: 1px;
+}
+
+.ip-email {
+  display: block;
+  font-size: 18px;
+  padding-left: 14px;
+  padding-right: 14px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 314px;
+  border-radius: 8px;
+  border-style: solid;
+  border-width: 1px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.sign-up-btn {
+  background-color: rgb(10, 102, 194);
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  border: none;
+  padding-left: 138px;
+  padding-right: 138px;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.uber-head {
+  font-family: Arial;
+  font-size: 28px;
+  margin-bottom: 20px;
+}
+
+.uber-ip-1,
+.uber-ip-2 {
+  /* font-size: 16px; */
+  padding-left: 14px;
+  padding-right: 14px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border: none;
+  background-color: rgb(238, 238, 238);
+  width: 280px;
+  display: block;
+}
+
+.uber-ip-2 {
+  margin-top: 6px;
+  margin-bottom: 25px;
+}
+
+.uber-btn-1 {
+  background-color: black;
+  color: white;
+  border: none;
+  padding-left: 18px;
+  padding-right: 18px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-right: 15px;
+  cursor: pointer;
+}
+
+.uber-btn-2 {
+  background-color: rgb(238, 238, 238);
+  border: none;
+  padding-left: 18px;
+  padding-right: 18px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-right: 15px;
+  cursor: pointer;
+
+}
