--- a/styles/header.css
+++ b/styles/header.css
@@ -7,20 +7,109 @@
 }
 
 .left-section {
-  background-color: lightblue;
-  width: 150px;
+  display: flex;
+  align-items: center;
+}
+
+.hamburger-menu {
+  height: 24px;
+  margin-left: 24px;
+  margin-right: 24px;
+  cursor: pointer;
+}
+
+.youtube-logo {
+  height: 20px;
+  cursor: pointer;
 }
 
 .middle-section {
-  background-color: lightpink;
   flex: 1;
   margin-left: 70px;
   margin-right: 35px;
   max-width: 500px;
+
+  display: flex;
+  align-items: center;
+}
+
+.search-bar {
+  flex: 1;
+  height: 36px;
+  padding-left: 12px;
+  font-size: 16px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(192, 192, 192);
+  border-radius: 2px;
+  box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
+  width: 0;
+}
+
+.search-bar::placeholder {
+  font-family: Roboto, Arial;
+  font-size: 16px;
+}
+
+.search-btn {
+  height: 40px;
+  width: 66px;
+  background-color: rgb(240, 240, 240);
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(192, 192, 192);
+  margin-left: -1px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.search-icon {
+  height: 24px;
+  margin-top: 4px;
+}
+
+.voice-search-btn {
+  height: 40px;
+  width: 40px;
+  background-color: rgb(248, 248, 248);
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.voice-search-icon {
+  height: 24px;
+  margin-top: 4px;
 }
 
 .right-section {
-  background-color: lightblue;
-  width: 200px;
+  width: 180px;
+  margin-right: 20px;
 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-shrink: 0;
+}
+
+.upload-icon {
+  height: 24px;
+  cursor: pointer;
+}
+
+.youtube-apps-icon {
+  height: 24px;
+  cursor: pointer;
+}
+
+.notifications-icon {
+  height: 24px;
+  cursor: pointer;
+}
+
+.my-channel-picture {
+  height: 35px;
+  width: 35px;
+  border-radius: 18px;
+  cursor: pointer;
 }
