--- a/intro-to-html/styles/lesson13_exercise.css
+++ b/intro-to-html/styles/lesson13_exercise.css
@@ -3,6 +3,10 @@ p {
   margin-bottom: 0;
 }
 
+body {
+  padding-bottom: 500px;
+}
+
 .next-one {
   margin-top: 30px;
   margin-bottom: 30px;
@@ -59,3 +63,157 @@ p {
   background-color: black;
   color: white;
 }
+
+.gmail-inbox {
+  width: 400px;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.heading {
+  font-family: Arial;
+  color: gray;
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+
+.content {
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.content-left-section {
+  width: 50px;
+  margin-right: 10px;
+}
+
+.profile-picture {
+  width: 100%;
+  height: 50px;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 25px;
+}
+
+.content-right-section {
+  flex: 1;
+  font-family: Arial;
+}
+
+.sender-info {
+  margin-bottom: 4px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.sender-name {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.sender-time {
+  font-size: 14px;
+  color: gray;
+}
+
+.subject {
+  font-weight: bold;
+  margin-bottom: 4px;
+}
+
+.email-body {
+  font-size: 15px;
+  color: gray;
+}
+
+.tweet {
+  width: 450px;
+  border: none;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+  display: flex;
+}
+
+.tw-left-section {
+  width: 60px;
+  margin-right: 10px;
+
+}
+
+.tw-profile-picture {
+  height: 60px;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 30px;
+}
+
+.tw-right-section {
+  flex: 1;
+  font-family: Arial;
+}
+
+.tw-user-info {
+  display: flex;
+  margin-bottom: 6px;
+}
+
+.tw-username {
+  font-weight: bold;
+  margin-right: 6px;
+}
+
+.tw-handle {
+  color: gray;
+}
+
+.tw-content {
+  line-height: 22px;
+  margin-bottom: 15px;
+}
+
+.tw-video-link-card {
+  height: 100px;
+  border-style: solid;
+  border-width: 1.5px;
+  border-color: rgb(209, 209, 209);
+  border-radius: 20px;
+  overflow: hidden;
+
+  display: flex;
+  align-items: center;
+}
+
+.video-link-card-left-section {
+  background-color: rgb(209, 209, 209);
+  width: 80px;
+  height: 100%;
+  /* did overflow: hidden; above */
+  /* border-top-left-radius: 18px;
+  border-bottom-left-radius: 18px; */
+  margin-right: 15px;
+}
+
+.video-link-card-right-section {
+  flex: 1;
+}
+
+.video-url {
+  color: gray;
+  margin-bottom: 4px;
+}
+
+.video-title {
+  line-height: 22px;
+}
+
