--- a/styles/header.css
+++ b/styles/header.css
@@ -8,11 +8,13 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
+  z-index: 100;
 }
 
 .left-section {
@@ -116,9 +118,29 @@
   cursor: pointer;
 }
 
+.notifications-icon-container {
+  position: relative;
+}
+
+.notifications-count {
+  font-family: Roboto, Arial;
+  font-size: 11px;
+  background-color: rgb(200, 0, 0);
+  color: white;
+  position: absolute;
+  top: -2px;
+  right: -5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-radius: 10px;
+}
+
 .my-channel-picture {
   height: 35px;
   width: 35px;
   border-radius: 18px;
   cursor: pointer;
 }
+
