--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -6,4 +6,30 @@
     left: 0;
     bottom: 0;
     top: 55px;
+    z-index: 200;
+
+    padding-top: 5px;
+}
+
+.sidebar-link {
+    height: 74px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.sidebar-link:hover {
+    background-color: rgb(232, 232, 232);
+}
+
+.sidebar-link img {
+    height: 24px;
+    margin-bottom: 5px;
+}
+
+.sidebar-link div {
+    font-family: Roboto, Arial;
+    font-size: 10px;
 }
