--- a/styles/header.css
+++ b/styles/header.css
@@ -49,16 +49,16 @@
   height: 36px;
   padding-left: 12px;
   font-size: 16px;
-  border-width: 1px;
+  /* border-width: 1px;
   border-style: solid;
-  border-color: rgb(192, 192, 192);
+  border-color: rgb(192, 192, 192); */
+  border: 1px solid rgb(192, 192, 192);
   border-radius: 2px;
   box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
   width: 0;
 }
 
 .search-bar::placeholder {
-  font-family: Roboto, Arial;
   font-size: 16px;
 }
 
@@ -103,7 +103,6 @@
   padding-bottom: 8px;
   border-radius: 2px;
   font-size: 12px;
-  font-family: Roboto, Arial;
   bottom: -45px;
   opacity: 0;
   transition: opacity 0.15s;
@@ -162,7 +161,6 @@
 } */
 
 .notifications-count {
-  font-family: Roboto, Arial;
   font-size: 11px;
   background-color: rgb(200, 0, 0);
   color: white;
