--- a/styles/video.css
+++ b/styles/video.css
@@ -5,6 +5,25 @@
   row-gap: 40px;
 }
 
+@media (max-width: 750px) {
+  .video-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (min-width: 751px) and (max-width: 999px) {
+  .video-grid {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (min-width: 1000px) {
+  .video-grid {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  
+}
+
 .thumbnail {
   width: 100%;
   /* display: block; */
@@ -118,13 +137,13 @@
   position: absolute;
   right: 5px;
   bottom: 8px;
-  font-family: Roboto, Arial;
   font-size: 12px;
   font-weight: 500;
-  padding-left: 4px;
+  /* padding-left: 4px;
   padding-right: 4px;
   padding-top: 4px;
-  padding-bottom: 4px;
+  padding-bottom: 4px; */
+  padding: 4px;
   border: none;
   border-radius: 2px;
 }
