--- a/styles/video.css
+++ b/styles/video.css
@@ -5,25 +5,6 @@
   row-gap: 40px;
 }
 
-@media (max-width: 750px) {
-  .video-grid {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
-@media (min-width: 751px) and (max-width: 999px) {
-  .video-grid {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-}
-
-@media (min-width: 1000px) {
-  .video-grid {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-  }
-  
-}
-
 .thumbnail {
   width: 100%;
   /* display: block; */
@@ -146,4 +127,33 @@
   padding: 4px;
   border: none;
   border-radius: 2px;
+}
+
+@media (max-width: 750px) {
+  .video-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (min-width: 751px) and (max-width: 1099px) {
+  .video-grid {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (min-width: 1100px) {
+  .video-grid {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+
+  .video-title {
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .video-author,
+  .video-stats {
+    font-size: 14px;
+  }
+  
 }
